# sanmar-sdk

./: .pre-commit-config.yaml  README.md  pylock.toml  pyproject.toml  requirements.txt
.github/workflows/: python-publish-pypi.yaml
docs/source/: changelog.rst  conf.py  index.rst
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt
src/sanmar_sdk/: __init__.py  client.py
